Presentation and todo list.

--- a/Analysis-Example.ipynb
+++ b/Analysis-Example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before running this example please run `python run_simulations.py`"
+    "Before running this example please run `run_simulations.py` script to generate data."
    ]
   },
   {
