--- a/Important notes.ipynb
+++ b/Important notes.ipynb
@@ -34,26 +34,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Concetration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Concentration:\n",
-    "\n",
-    "$$ c(t) = \\frac{N_{\\uparrow}(t)}{N} $$\n",
-    "\n",
-    "where \n",
-    "* $ N_{\\uparrow}(t) $ - number of adopted people, i.e. spinsons with opinion = 1\n",
-    "* N - number of people in network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Possible extensions"
    ]
   },
@@ -77,35 +57,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plots to reproduce"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* $c(t)$ vs $t$, $T = 4000$, $100x100$ square lattice, $p = 0.1$, $f = 0.1$, $h = 0.09$ (Fig. 5)\n",
-    "* Snapshots of network (Fig. 6)\n",
-    "* mean and median of $c(t)$ for $h=\\{0.1, 0.09, 0.085, 0.05\\}$, $T=8000$, $100x100$ square lattice, $p = 0.1$, $f = 0.1$, $10^3$ trajectiories (Fig. 7)\n",
-    "* mean, median, confidence intervals for $h=0.09$, $h=0.095$ (Fig. 8)\n",
-    "* $c(t)$ vs $h$ and grouped by $p$ (Fig. 9)\n",
-    "* (Fig. 10 - right)\n",
-    "* (Fig. 11 - left)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Presentation notes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Compare results from article to ours\n",
-    "* Valley of Death metaphor"
+    "### TODO:\n",
+    "\n",
+    "* Snapshots or animated GIF of lattice grid network (Fig. 6)\n",
+    "    * 2D Lattice grid\n",
+    "    * $ h = 0.09 $\n",
+    "    * $ f = 0.1 $\n",
+    "    * $ p = 0.1 $\n",
+    "    * $ q = 4 $\n",
+    "    * $ t = 10^4 $\n",
+    "* Simulation of model $ c(t) $\n",
+    "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
+    "    * $ h \\in \\{0.1, 0.09, 0.085, 0.08\\} $\n",
+    "    * $ f = 0.1 $\n",
+    "    * $ p = 0.1 $\n",
+    "    * $ q = 4 $\n",
+    "    * $ t = 10^4 $\n",
+    "* Summary of simulation of model $ c(t) $\n",
+    "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
+    "    * $ h = 0.09 $\n",
+    "* Simulation of model $ h^*(p) $\n",
+    "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
+    "    * $ h $ - find good ones \n",
+    "        * 2D - $ h \\in [0.04, 0.14] $ - Fig. 9 (left)\n",
+    "        * Complete - $ h \\in [0.14, 0.22] $ - Fig. 10 (right)\n",
+    "        * WS - TODO\n",
+    "        * BA - TODO\n",
+    "    * $ f = 0.1 $\n",
+    "    * $ p \\in \\{0.05, 0.1, 0.2 \\} $\n",
+    "    * $ q = 4 $\n",
+    "    * $ t = 10^4 $"
    ]
   }
  ],
