Examples for new plots, changed structure of results, added images from publication.

--- a/Important-notes.ipynb
+++ b/Important-notes.ipynb
@@ -68,25 +68,27 @@
     "    * $ t = 10^4 $\n",
     "* Simulation of model $ c(t) $\n",
     "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
-    "    * $ h \\in \\{0.1, 0.09, 0.085, 0.08\\} $\n",
+    "    * $ h \\in \\{0.1, 0.09, 0.085, 0.05\\} $\n",
     "    * $ f = 0.1 $\n",
     "    * $ p = 0.1 $\n",
     "    * $ q = 4 $\n",
     "    * $ t = 10^4 $\n",
+    "    * Mean over $ 10^3 $ independent runs\n",
     "* Summary of simulation of model $ c(t) $\n",
     "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
     "    * $ h = 0.09 $\n",
     "* Simulation of model $ h^*(p) $\n",
     "    * 2D Lattice grid, Complete graph, Watts-Strogatz, Barabasi-Albert\n",
     "    * $ h $ - find good ones \n",
-    "        * 2D - $ h \\in [0.04, 0.14] $ - Fig. 9 (left)\n",
-    "        * Complete - $ h \\in [0.14, 0.22] $ - Fig. 10 (right)\n",
-    "        * WS - TODO\n",
-    "        * BA - TODO\n",
+    "        * 2D Lattice grid - $ h \\in [0.04, 0.14] $ - Fig. 9 (left)\n",
+    "        * Complete graph - $ h \\in [0.14, 0.22] $ - Fig. 10 (right)\n",
+    "        * Watts-Strogatz - TODO\n",
+    "        * Barabasi-Albert - TODO\n",
     "    * $ f = 0.1 $\n",
     "    * $ p \\in \\{0.05, 0.1, 0.2 \\} $\n",
     "    * $ q = 4 $\n",
-    "    * $ t = 10^4 $"
+    "    * $ t = 10^4 $\n",
+    "    * Mean over $ 10^3 $ independent runs"
    ]
   }
  ],
