--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -25,6 +25,12 @@
 \end{frame}
 
 \begin{frame}{2D Lattice simulation}
+	\begin{figure}
+		\includegraphics[height=0.4\textheight]{../resources/images/fig6.png}
+		\hfill
+		\includegraphics[height=0.4\textheight]{../resources/images/fig6.png}
+		\caption{Up - publication; down - ours.}
+	\end{figure}
 	Comparison (Fig. 6)
 	GIF!
 \end{frame}
@@ -43,19 +49,35 @@
 \end{frame}
 
 \begin{frame}{2D Lattice results}
-	Comparison - Fig. 7 (left)
+	\begin{figure}
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig7-left.png}
+		\hfill
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig7-left.png}
+		\caption{Left - publication; right - ours.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Complete graph results}
-	Comparison (errors) - Fig. 10 (left)
+	\begin{figure}
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-left.png}
+		\hfill
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-left.png}
+		\caption{Left - publication; right - ours.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Watts-Strogatz results}
-	Our work - simulation
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../results/images/example.png}
+		\caption{Our work - simulation.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Barabasi-Albert results}
-	Our work - simulation
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../results/images/example.png}
+		\caption{Our work - simulation.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Comparison of models}
@@ -69,21 +91,39 @@
 \end{frame}
 
 \begin{frame}{2D Lattice results}
+	\begin{figure}
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig9-left.png}
+		\hfill
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig9-left.png}
+		\caption{Left - publication; right - ours.}
+	\end{figure}
 	Comparison - Fig. 9 (left)
 	Simulations
 \end{frame}
 
 \begin{frame}{Complete graph results}
+	\begin{figure}
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-right.png}
+		\hfill
+		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-right.png}
+		\caption{Left - publication; right - ours.}
+	\end{figure}
 	Comparison - Fig. 10 (right)
 	Theoretical results
 \end{frame}
 
 \begin{frame}{Watts-Strogatz results}
-	Our work - simulation
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../results/images/example.png}
+		\caption{Our work - simulation.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Barabasi-Albert results}
-	Our work - simulation
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../results/images/example.png}
+		\caption{Our work - simulation.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Comparison of models}
