Add a new task.

--- a/Important-notes.ipynb
+++ b/Important-notes.ipynb
@@ -88,7 +88,8 @@
     "    * $ p \\in \\{0.05, 0.1, 0.2 \\} $\n",
     "    * $ q = 4 $\n",
     "    * $ t = 10^4 $\n",
-    "    * Mean over $ 10^3 $ independent runs"
+    "    * Mean over $ 10^3 $ independent runs\n",
+    "* Write good-looking README"
    ]
   }
  ],
