Presentation - valley of death, introduction, model presentation.

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -16,12 +16,46 @@
 
 \maketitle
 
-\begin{frame}{Introduction}
-	Diffusion of innovation - information
+\begin{frame}{Introduction and motivation}
+	Diffusion of innovations is a theory that seeks to explain how, why, and at what rate new ideas and technology spread.
+	
+	\begin{figure}
+		\includegraphics[height=0.5\textheight]{../resources/images/Diffusion_of_ideas.png}
+		\caption{The diffusion of innovations according to E.Rogers. Source: \url{https://en.wikipedia.org/wiki/Diffusion\_of\_innovations\#/media/File:Diffusion\_of\_ideas.svg}}
+	\end{figure}
+	\nocite{article}
 \end{frame}{}
 
+\section{Diffusion of innovation model}
+
 \begin{frame}{Model presentation}
-	Model presentation
+	Model parameters
+	\begin{itemize}
+		\item Conformity $p$
+		\item Independence $f$
+		\item Advertising $h$
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Conformity}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../resources/images/conformity.png}
+		\caption{Schema of conformity $p$. Source: \cite{article}.}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Independence}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../resources/images/flexibility.png}
+		\caption{Schema of independence $f$. Source: \cite{article}.}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Advertising}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../resources/images/advertising.png}
+		\caption{Schema of advertising $h$. Source: \cite{article}.}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{2D Lattice simulation}
@@ -87,7 +121,9 @@
 \section{Market penetration level}
 
 \begin{frame}{Valley of death}
-	Valley of death and $h^*(p)$ description
+	Valley of death is a metaphor of way from the laboratory to the market when in reality many innovators fail. Contrary to aggregate models, such as Bass model, this kind of phenomena can be explained by agent-based models.
+	
+	We can observe that phenomenon near the threshold values of $p$ and $h$.
 \end{frame}
 
 \begin{frame}{2D Lattice results}
@@ -147,6 +183,27 @@
 
 \begin{frame}{Conclusions}
 	content...
+\end{frame}
+
+\begin{frame}{Contributions}
+	Presentation:
+	\begin{itemize}
+		\item Patryk Wielopolski
+	\end{itemize}
+	Plots and analysis:
+	\begin{itemize}
+		\item Maria Kowalczyk
+		\item Anna Szymanek
+	\end{itemize}
+	Simulations:
+	\begin{itemize}
+		\item Patryk Wielopolski
+	\end{itemize}
+\end{frame}
+
+\begin{frame}[allowframebreaks]{References}	
+	\bibliography{references}
+	\bibliographystyle{abbrv}
 \end{frame}
 
 \begin{frame}
