--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -65,8 +65,6 @@
 		\includegraphics[height=0.4\textheight]{../resources/images/fig6.png}
 		\caption{Up - publication; down - ours.}
 	\end{figure}
-	Comparison (Fig. 6)
-	GIF!
 \end{frame}
 
 \section{Concentration in time}
@@ -86,8 +84,8 @@
 	\begin{figure}
 		\includegraphics[width=0.475\textwidth]{../resources/images/fig7-left.png}
 		\hfill
-		\includegraphics[width=0.475\textwidth]{../resources/images/fig7-left.png}
-		\caption{Left - publication; right - ours.}
+		\includegraphics[width=5.5cm, height=4cm]{../results/images/lattice_900.png}
+		\caption{Left - publication; right - our simulation with 3000 MC steps and 100 independent runs on a grid lattice with 900 nodes. .}
 	\end{figure}
 \end{frame}
 
@@ -95,27 +93,30 @@
 	\begin{figure}
 		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-left.png}
 		\hfill
-		\includegraphics[width=0.475\textwidth]{../resources/images/fig10-left.png}
-		\caption{Left - publication; right - ours.}
+		\includegraphics[width=5.5cm, height=4.3cm]{../results/images/complete.png}
+		\caption{Left - publication; right - our simulation with 1000 MC steps and 100 independent runs on a complete graph with 400 nodes.  }
 	\end{figure}
 \end{frame}
 
 \begin{frame}{Watts-Strogatz results}
 	\begin{figure}
-		\includegraphics[width=\textwidth]{../results/images/example.png}
-		\caption{Our work - simulation.}
+		\includegraphics[width=\textwidth]{../results/images/WS.png}
+		\caption{Our work - simulation with 1000 MC steps and 100 independent runs on a Watts-Strogatz (k=4,p=0.3) graph with 400 nodes. }
 	\end{figure}
 \end{frame}
 
 \begin{frame}{Barabasi-Albert results}
 	\begin{figure}
-		\includegraphics[width=\textwidth]{../results/images/example.png}
-		\caption{Our work - simulation.}
+		\includegraphics[width=\textwidth]{../results/images/BA.png}
+		\caption{Our work - simulation with 1000 MC steps and 100 independent runs on a Barabasi-Albert (2) graph with 400 nodes. }
 	\end{figure}
 \end{frame}
 
 \begin{frame}{Comparison of models}
-	
+	\begin{figure}
+		\includegraphics[width=\textwidth]{../results/images/comparison.png}
+		\caption{Our work - simulation with 1000 MC steps and 100 independent runs on graphs with 400 nodes, h=0.09. }
+	\end{figure}
 \end{frame}
 
 \section{Market penetration level}
@@ -182,7 +183,11 @@
 \section{Conclusions}
 
 \begin{frame}{Conclusions}
-	content...
+	\begin{itemize}
+		\item Because of independence system never reaches an absorbing unanimous steady state.
+		\item Independence allows to investigate the system in which initially there are no adopters.
+		\item Differences between the article and our simulations may arise from the use of much smaller graphs.
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Contributions}
