added results images

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -61,8 +61,8 @@
 \begin{frame}{2D Lattice simulation}
 	\begin{figure}
 		\includegraphics[height=0.4\textheight]{../resources/images/fig6.png}
-		\hfill
-		\includegraphics[height=0.4\textheight]{../resources/images/fig6.png}
+		\vfill
+		\includegraphics[height=0.4\textheight]{../results/images/snapshots.png}
 		\caption{Up - publication; down - ours.}
 	\end{figure}
 \end{frame}
@@ -114,7 +114,7 @@
 
 \begin{frame}{Comparison of models}
 	\begin{figure}
-		\includegraphics[width=\textwidth]{../results/images/comparison.png}
+		\includegraphics[width=\textwidth]{../results/images/comparison_with_lattice.jpg}
 		\caption{Our work - simulation with 1000 MC steps and 100 independent runs on graphs with 400 nodes, h=0.09. }
 	\end{figure}
 \end{frame}
